<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/rel1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/t_nombreAccion"
        android:textSize="25sp"
        android:id="@+id/t_nombreAccion"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/t_Rangos"
        android:id="@+id/t_Rangos"
        android:layout_below="@+id/minY"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/t_minY"
        android:id="@+id/t_minY"
        android:layout_marginTop="62dp"
        android:layout_below="@+id/t_nombreAccion"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/noData"
        android:id="@+id/minY"
        android:textSize="20sp"
        android:layout_alignStart="@+id/t_minY"
        android:layout_below="@+id/t_minY"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/t_maxY"
        android:id="@+id/t_maxY"
        android:layout_below="@+id/minY"
        android:layout_marginTop="20sp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/minY" />

    <TextView
        android:id="@+id/maxY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/noData"
        android:textSize="20sp"
        android:layout_alignTop="@+id/maxZ"
        android:layout_alignStart="@+id/t_maxY" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/t_minZ"
        android:id="@+id/t_minZ"
        android:layout_alignTop="@+id/t_minY"
        android:layout_toEndOf="@+id/t_nombreAccion" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/noData"
        android:id="@+id/minZ"
        android:textSize="20sp"
        android:layout_below="@+id/t_minZ"
        android:layout_alignStart="@+id/t_minZ" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/t_maxZ"
        android:id="@+id/t_maxZ"
        android:layout_alignBaseline="@+id/t_maxY"
        android:layout_alignBottom="@+id/t_maxY"
        android:layout_alignStart="@+id/minZ" />

    <TextView
        android:id="@+id/maxZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/noData"
        android:textSize="20sp"
        android:layout_alignStart="@+id/minZ"
        android:layout_below="@+id/t_maxZ"
        android:layout_alignLeft="@+id/minZ" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/t_Accion"
        android:id="@+id/t_Accion"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/maxY" />

    <TextView
        android:id="@+id/accionSel"
        android:text="@string/noActionSel"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/t_Accion"
        android:layout_alignStart="@+id/t_maxY" />


</RelativeLayout>