<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:id="@+id/rel2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/t_nombreAccion"
        android:textSize="25sp"
        android:id="@+id/t_nombreAccion"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shakesT"
        android:id="@+id/nShakes"
        android:layout_marginTop="70dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/t_nShakes"
        android:layout_alignTop="@+id/nShakes"
        android:layout_alignEnd="@+id/nShakes"
        android:layout_marginRight="70dp"
        android:textSize="25dp"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/t_Accion"
        android:id="@+id/t_Accion"
        android:layout_marginTop="200dp"  />

    <TextView
        android:id="@+id/accionSel"
        android:text="@string/noActionSel"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/t_Accion"
        android:layout_toEndOf="@+id/t_Accion"
        android:layout_marginLeft="50dp"/>

</RelativeLayout>